# swtpm

./: .gitignore  .travis.yml  CHANGES  COPYING  Dockerfile  INSTALL  LICENSE  Makefile.am  README  TODO  autogen.sh  bootstrap.sh  check_shell_scripts.py  cla-corporate.doc  cla-individual.doc  configure.ac  docker-compose.yml  meson.build  meson.options  run_tests  swtpm.spec  swtpm.spec.in
man/man3/: Makefile.am  meson.build  swtpm_ioctls.3  swtpm_ioctls.pod
man/man5/: Makefile.am  meson.build  swtpm-localca.conf.pod  swtpm_setup.conf.pod
man/man8/: Makefile.am  meson.build  swtpm-create-tpmca.8  swtpm-create-tpmca.pod  swtpm-localca.8  swtpm-localca.conf.8  swtpm-localca.conf.pod  swtpm-localca.options.8  swtpm-localca.options.pod  swtpm-localca.pod  swtpm-localca.sh.8  swtpm-localca.sh.pod  swtpm.8  swtpm.pod  swtpm_bios.8  swtpm_bios.pod  swtpm_cert.8  swtpm_cert.pod  swtpm_cuse.8  swtpm_cuse.pod  swtpm_ioctl.8  swtpm_ioctl.pod  swtpm_localca.pod  swtpm_setup.8  swtpm_setup.conf.8  swtpm_setup.conf.pod  swtpm_setup.pod  swtpm_setup.sh.8
samples/: Makefile.am  meson.build  setup.py  swtpm-create-tpmca  swtpm-create-user-config-files.in  swtpm-localca  swtpm-localca.conf  swtpm-localca.conf.in  swtpm-localca.in  swtpm-localca.options  swtpm-localca.sh  swtpm_localca.c  swtpm_localca_utils.c  swtpm_localca_utils.h  swtpm_setup.conf.in
samples/py_swtpm_localca/: swtpm_localca.py  swtpm_localca_conf.py.in  swtpm_utils.py
src/: Makefile.am  meson.build  swtpm-sysusers.conf.in  swtpm-tmpfiles.conf.in
src/selinux/: Makefile.am  adapt_policy.sh  meson.build  swtpm.fc  swtpm.fc.in  swtpm.if  swtpm.te  swtpm_libvirt.te  swtpm_svirt.te  swtpmcuse.fc  swtpmcuse.fc.in  swtpmcuse.if  swtpmcuse.te  swtpmcuse_svirt.te
src/swtpm/: Makefile.am  capabilities.c  capabilities.h  check_algos.c  check_algos.h  common.c  common.h  connect.c  connect.h  ctrlchannel.c  ctrlchannel.h  cuse_tpm.c  cuse_tpm_bsd.c  daemonize.c  daemonize.h  fips.c  fips.h  key.c  key.h  locality.h  logging.c  logging.h  main.c  main.h  mainloop.c  mainloop.h  meson.build  options.c  options.h  osx.c  osx.h  pcap.c  pcap.h  pidfile.c  pidfile.h  profile.c  profile.h  sd-notify.c  sd-notify.h  seccomp_profile.c  (+35 more)
src/swtpm_bios/: Makefile.am  README  meson.build  tpm_bios.c  tpm_bios.h
src/swtpm_cert/: Makefile.am  README  ek-cert.c  meson.build  out  tpm.asn  tpm_asn1.h
src/swtpm_ioctl/: Makefile.am  README  meson.build  tpm_ioctl.c
src/swtpm_localca/: Makefile.am  meson.build  swtpm_localca.c  swtpm_localca.h  swtpm_localca_conf.h.in  swtpm_localca_utils.c  swtpm_localca_utils.h
src/swtpm_setup/: Makefile.am  README  meson.build  profile.c  profile.h  setup.py  swtpm.c  swtpm.h  swtpm_backend_dir.c  swtpm_backend_file.c  swtpm_backend_plugin.c.inc  swtpm_backend_plugin_stub.c.inc  swtpm_setup.c  swtpm_setup.h  swtpm_setup.h.in  swtpm_setup.in  swtpm_setup.sh  swtpm_setup.sh.in  swtpm_setup_conf.h.in  swtpm_setup_utils.c  swtpm_setup_utils.h  swtpm_tcsd_launcher  tcsd-launcher.c
src/swtpm_setup/py_swtpm_setup/: swtpm.py  swtpm_setup.py  swtpm_setup_conf.py.in  swtpm_utils.py
src/swtpm_storage_plugin/: Makefile.am  swtpm_storage_plugin.h  swtpm_storage_plugin_dir.c  swtpm_storage_plugin_file.c
src/utils/: Makefile.am  meson.build  swtpm_conf.h.in  swtpm_utils.c  swtpm_utils.h
tests/: Makefile.am  Readme.md  _test_encrypted_state  _test_getcap  _test_hashing  _test_hashing2  _test_init  _test_locality  _test_migration_key  _test_migration_key_2  _test_print_capabilities  _test_print_states  _test_resume_volatile  _test_save_load_encrypted_state  _test_save_load_state  _test_setbuffersize  _test_swtpm_bios  _test_swtpm_cert  _test_tpm2_avoid_da_lockout  _test_tpm2_derived_keys  _test_tpm2_encrypted_state  _test_tpm2_file_permissions  _test_tpm2_getcap  _test_tpm2_hashing  _test_tpm2_hashing2  _test_tpm2_hashing3  _test_tpm2_init  _test_tpm2_locality  _test_tpm2_migration_key  _test_tpm2_pcap  _test_tpm2_print_capabilities  _test_tpm2_print_states  _test_tpm2_probe  _test_tpm2_resume_volatile  _test_tpm2_save_load_encrypted_state  _test_tpm2_save_load_state  _test_tpm2_save_load_state_da_timeout  _test_tpm2_save_load_state_locking  _test_tpm2_savestate  _test_tpm2_setbuffersize  (+118 more)
tests/data/: ecprivek.pem  ecpubek.pem  issuercert.pem  keyfile256bit.txt  mldsa65pubek.pem  mlkem1024pubek.pem  pluginbackend_wrapper.c  pubek.pem  signkey-encrypted.pem  signkey.pem  storage_plugin_dlopen_shim.c  swtpm-localca-rootca-cert.pem  swtpm-localca-rootca-privkey.pem  swtpm_storage_plugin_dir_wrapper.c
tests/data/tpm2state1/: tpm2-00.permall  tpm2-00.volatilestate
tests/data/tpm2state2/: tpm2-00.permall  tpm2-00.volatilestate
tests/data/tpm2state2b/: tpm2-00.permall  tpm2-00.volatilestate
tests/data/tpm2state3/: hkey.priv  hkey.pub  tpm2-00.permall  tpm2-00.volatilestate  tpm2-00.volatilestate.2nd  tpm2-00.volatilestate.3rd
tests/data/tpm2state3b/: tpm2-00.permall  tpm2-00.volatilestate
tests/data/tpm2state3c/: tpm2-00.permall  tpm2-00.volatilestate
tests/data/tpm2state3d/: tpm2-00.permall  tpm2-00.volatilestate
tests/data/tpm2state4/: tpm2-00.permall  tpm2-00.volatilestate
tests/data/tpm2state5/: tpm2-00.permall
tests/data/tpm2state6/: tpm2-00.permall
tests/data/tpm2state8/: Readme.txt
tests/patches/: 0001-Deactivate-test-cases-accessing-rootcerts.txt.patch  0001-Disable-rev183-test-cases.patch  0002-Implement-powerup-for-swtpm.patch  0003-Set-CRYPTOLIBRARY-to-openssl.patch  0004-Store-and-restore-volatile-state-at-every-step.patch  0004-Store-volatile-state-at-every-step.patch  0005-Disable-tests-related-to-events.patch  0006-Disable-testing-with-RSA-3072.patch  0007-Disable-rev155-test-cases.patch  0008-Disable-x509-test-cases.patch  0009-Disable-getcapability-TPM_CAP_ACT.patch  0010-Adjust-test-cases-for-OpenSSL-3.patch  0011-Disable-ECC-encrypt-decrypt-tests.patch  0011-Remove-unnecessary-include-of-openssl-engine.h.patch  0012-Disable-Nuvoton-commands.patch  0013-Disable-x509-test-cases-part2.patch  ibmtss2_1.5_rsa2048only.patch  ibmtss2_1.6_rsa2048only.patch  lib.patch  libtpm.patch
(+47 files in other folders)
